--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                                 <p id="userEmail" class="text-sm font-medium text-white truncate"></p>
                             </div>
                             
-                            <a href="#" class="block px-4 py-2 text-sm text-slate-300 hover:bg-slate-700 hover:text-white transition">
+                            <a href="/User" class="block px-4 py-2 text-sm text-slate-300 hover:bg-slate-700 hover:text-white transition">
                                 <i class="fa-solid fa-user-gear mr-2 w-4"></i> Perfil
                             </a>
                             <a href="#" class="block px-4 py-2 text-sm text-slate-300 hover:bg-slate-700 hover:text-white transition">
