--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <main class="flex-grow p-4 sm:p-6 lg:p-8 max-w-[1400px] mx-auto w-full relative">
         
     <!-- Cabeçalho -->
-    <div class="mb-8">
+    <div class="mb-8" style="margin-left: 0.5%;">
         <h1 class="text-3xl font-bold text-white">Olá, @ViewBag.userName</h1>
         <p class="text-slate-400">Aqui está o resumo do seu treino de hoje.</p>
     </div>
