navbar marcando qual a rota no layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -84,12 +84,12 @@
                         Início
                     </a>
 
-                    <a asp-controller="Home"
+                    <a asp-controller="Workout"
                     asp-action="Privacy"
-                    class="@(currentController == "Home" && currentAction == "Privacy"
+                    class="@(currentController == "Workout" && currentAction == "Index"
                         ? "text-emerald-400 font-bold"
                         : "hover:text-white transition")">
-                        Privacidade
+                        Treinos
                     </a>
 
                     <a asp-controller="History"
